add more function routes
